--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: all
   vars_files:
-    - vars/main.yml
+    - vars/init.yml
   tasks:
-    - name: Hello World
+    - name: Hello World!
       shell: /bin/echo "Hello World!" > /vagrant/hello.txt
   roles:
     - { role: geerlingguy.apache }
