--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,7 @@
-# Additional paths to search for roles in, colon separated
-# @see http://docs.ansible.com/intro_configuration.html#roles-path
+##
+# The Ansible Configuration File
+# @see http://docs.ansible.com/intro_configuration.html
+##
+
 roles_path = ./roles/galaxy:./roles/local
 
