Fixed Apache Hello World

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,5 +3,5 @@
 # @see http://docs.ansible.com/intro_configuration.html
 ##
 
-roles_path = ./roles/galaxy:./roles/local
+roles_path = ./roles/vendor:./roles/local
 
