--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,7 +4,9 @@
     - vars/init.yml
   tasks:
     - name: Hello World!
-      shell: /bin/echo "Hello World!" > /vagrant/hello.txt
+      shell: /bin/echo "<h1>Hello World! from playbook.yml</h1>" > /vagrant/project/www/index.html
+    - name: PHP Info
+      shell: /bin/echo "<?php phpinfo(); ?>" > /vagrant/project/www/info.php
   roles:
     - { role: geerlingguy.apache }
     - { role: geerlingguy.mysql }
