--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,6 +7,8 @@
       shell: /bin/echo "<h1>Hello World! from playbook.yml</h1>" > /vagrant/project/www/index.html
     - name: PHP Info
       shell: /bin/echo "<?php phpinfo(); ?>" > /vagrant/project/www/info.php
+    - name: Install Apache libapache2-mod-php5
+      apt: pkg=libapache2-mod-php5 state=installed update_cache=true
   roles:
     - { role: geerlingguy.apache }
     - { role: geerlingguy.mysql }
