--- a/ansible/vars/init.yml
+++ b/ansible/vars/init.yml
@@ -4,6 +4,8 @@
   apache_listen_port: 80
   apache_vhosts:
     - {servername: "project.dev", documentroot: "/vagrant/project/www/"}
+  apache_mods_enabled:
+    - rewrite.load
 
   # role: geerlingguy.php
   php_memory_limit: "128M"
