--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,5 @@
 # @see http://docs.ansible.com/intro_configuration.html
 ##
 
-roles_path = ./roles/vendor:./roles/local
-
+[defaults]
+roles_path = ./ansible/roles/vendor:./ansible/roles/local
